Refactor code to lessen verbosity

--- a/game-page.html
+++ b/game-page.html
@@ -124,7 +124,7 @@
     <!-- 'COUNTDOWN TO START' Lightbox [End]  -->
 
     <!-- 'GAME OVER' Lightbox [Start]-->
-    <section id="gameover-outer-wrapper">
+    <section id="gameover-outer-wrapper" class="hide">
         <div id="gameover-inner-wrapper">
             <h2>Game Over</h2>
             <p>We're sorry, <span id="username-gameover">Player Name</span>, you lost!</p>
@@ -137,7 +137,7 @@
     <!-- 'GAME OVER' Lightbox [End]-->
 
     <!-- 'GAME WON' Lightbox [Start]-->
-    <section id="gamewon-outer-wrapper">
+    <section id="gamewon-outer-wrapper" class="hide">
         <div id="gamewon-inner-wrapper">
             <h2>Congratulations, <span id="username-gamewon">player</span>!</h2>
             <p>You won &euro;<span id="grand-prize">1 Million</span>!</p>
@@ -148,7 +148,7 @@
     <!-- 'GAME WON' Lightbox [End]-->
 
     <!-- 'QUIT' Lightbox [Start]-->
-    <section id="quit-outer-wrapper">
+    <section id="quit-outer-wrapper" class="hide">
         <div id="quit-inner-wrapper">
             <h2>Oops!</h2>
             <p>You quit the game!</p>
