--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <button id="howtoplay-btn-homepage">How to Play</button>
 
     <!-- 'ENTER USERNAME' Lightbox [Start] -->
-    <section id="username-outer-wrapper">
+    <section id="username-outer-wrapper" class="hide">
         <div id="username-inner-wrapper">
             <div class="close-username-container">
                 <i class="fas fa-times" id="close-username" aria-label="button to close the lightbox"></i>
