Add hide class to countdown and 'how to play' lightboxes

--- a/game-page.html
+++ b/game-page.html
@@ -116,7 +116,7 @@
     <!-- GAME AREA [End]-->
 
     <!-- 'COUNTDOWN TO START' Lightbox [Start] -->
-    <div id="countdown-outer-wrapper">
+    <div id="countdown-outer-wrapper" class="hide">
         <div id="countdown-inner-wrapper">
             <span id="countdown">3</span>
         </div>
@@ -160,7 +160,7 @@
     <!-- 'QUIT' Lightbox [End]-->
 
     <!-- 'HOW TO PLAY' Lightbox [Start] -->
-    <section id="howtoplay-outer-wrapper"></section>
+    <section id="howtoplay-outer-wrapper" class="hide"></section>
     <!-- 'HOW TO PLAY' Lightbox [End] -->
 
     <!-- link to Fontawesome -->
