--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- 'ENTER USERNAME' Lightbox [End] -->
 
     <!-- 'HOW TO PLAY' Lightbox [Start] -->
-    <section id="howtoplay-outer-wrapper"></section>
+    <section id="howtoplay-outer-wrapper" class="hide"></section>
     <!-- 'HOW TO PLAY' Lightbox [End] -->
 
     <!-- link to Fontawesome -->
