Create and add classes for button's color and border

--- a/game-page.html
+++ b/game-page.html
@@ -127,19 +127,19 @@
             <p>We're sorry, <span id="username-gameover">Player Name</span>, you lost!</p>
             <p>You're going home with &euro;<span id="prize-won">0</span>!</p>
             <span class="not-bad hide">Not bad!</span>
-            <button id="play-again-gameover">Play Again</button>
-            <a href="index.html">Home</a>
+            <button id="play-again-gameover" class="btn-border btn-color">Play Again</button>
+            <a href="index.html" class="btn-border btn-color">Home</a>
         </div>
     </section>
     <!-- 'GAME OVER' Lightbox [End]-->
 
     <!-- 'GAME WON' Lightbox [Start]-->
-    <section id="gamewon-outer-wrapper" class="hide overlay-bgcolor">
+    <section id="gamewon-outer-wrapper" class="overlay-bgcolor hide">
         <div id="gamewon-inner-wrapper">
             <h2>Congratulations, <span id="username-gamewon">player</span>!</h2>
             <p>You won &euro;<span id="grand-prize">1 Million</span>!</p>
-            <button id="play-again-gamewon">Play Again</button>
-            <a href="index.html">Home</a>
+            <button id="play-again-gamewon" class="btn-border btn-color">Play Again</button>
+            <a href="index.html" class="btn-border btn-color">Home</a>
         </div>
     </section>
     <!-- 'GAME WON' Lightbox [End]-->
@@ -150,8 +150,8 @@
             <h2>Oops!</h2>
             <p>You quit the game!</p>
             <p>You're going home with NO MONEY.</p>
-            <button id="play-again-quitter">Play Again</button>
-            <a href="index.html">Home</a>
+            <button id="play-again-quitter" class="btn-border btn-color">Play Again</button>
+            <a href="index.html" class="btn-border btn-color">Home</a>
         </div>
     </section>
     <!-- 'QUIT' Lightbox [End]-->
