--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
 </head>
 <body id="homepage-body">
-    <!-- Logo -->
-    <div id="logo-wrapper">
+    <header id="logo-wrapper">
+        <!-- Logo -->
         <h1 id="logo-homepage">
             <span id="logo-span-1">The</span> 
             Million Euro 
             <span id="logo-span-2">Quiz</span>
         </h1>
-    </div>
+    </header>
 
     <!-- play button -->
-    <button id="play-button">Play</button>
+    <button id="play-button" class="btn-border btn-color">Play</button>
     <!-- 'how to play' button -->
-    <button id="howtoplay-btn-homepage">How to Play</button>
+    <button id="howtoplay-btn-homepage" class="btn-border btn-color">How to Play</button>
 
     <!-- 'ENTER USERNAME' Lightbox [Start] -->
     <section id="username-outer-wrapper" class="hide overlay-bgcolor">
@@ -42,7 +42,7 @@
             <h2>Enter Player's Name:</h2>
             <form id="username-form">
                 <input type="text" name="username" id="username" placeholder="your name here" aria-label="Enter player's name" maxlength="12">
-                <button id="username-btn">Let's Play</button>
+                <button id="username-btn" class="btn-border btn-color">Let's Play</button>
             </form>
             <small id="username-feedback"></small>
         </div>
