Update style of button in 404 page

--- a/404.html
+++ b/404.html
@@ -37,7 +37,7 @@
             <h1>PAGE NOT FOUND</h1>
             <div id="page-404-info-box">
                 <p>I know you want to be a millionaire, but you are just in the wrong way.</p>
-                <a href="index.html">Return Home</a>
+                <a href="index.html" class="btn-border btn-color">Return Home</a>
             </div>
         </div>
     </section>
