Make minor retouch on styling

--- a/game-page.html
+++ b/game-page.html
@@ -134,10 +134,10 @@
     <!-- 'GAME OVER' Lightbox [End]-->
 
     <!-- 'GAME WON' Lightbox [Start]-->
-    <section id="gamewon-outer-wrapper" class="overlay-bgcolor hide">
+    <section id="gamewon-outer-wrapper" class="overlay-bgcolor ">
         <div id="gamewon-inner-wrapper">
             <h2>Congratulations, <span id="username-gamewon">player</span>!</h2>
-            <p>You won &euro;<span id="grand-prize">1 Million</span>!</p>
+            <p>You won <span id="grand-prize">&euro; 1 Million!</span></p>
             <button id="play-again-gamewon" class="btn-border btn-color">Play Again</button>
             <a href="index.html" class="btn-border btn-color">Home</a>
         </div>
