Hide 'Game Won' lightbox by default

--- a/game-page.html
+++ b/game-page.html
@@ -134,7 +134,7 @@
     <!-- 'GAME OVER' Lightbox [End]-->
 
     <!-- 'GAME WON' Lightbox [Start]-->
-    <section id="gamewon-outer-wrapper" class="overlay-bgcolor ">
+    <section id="gamewon-outer-wrapper" class="overlay-bgcolor hide">
         <div id="gamewon-inner-wrapper">
             <h2>Congratulations, <span id="username-gamewon">player</span>!</h2>
             <p>You won <span id="grand-prize">&euro; 1 Million!</span></p>
