Create and add classes for background color and border to lightboxes

--- a/game-page.html
+++ b/game-page.html
@@ -120,7 +120,7 @@
 
     <!-- 'GAME OVER' Lightbox [Start]-->
     <section id="gameover-outer-wrapper" class="hide overlay-bgcolor">
-        <div id="gameover-inner-wrapper">
+        <div id="gameover-inner-wrapper" class="lightbox-bgcolor lightbox-border">
             <h2>Game Over</h2>
             <p>We're sorry, <span id="username-gameover">Player Name</span>, you lost!</p>
             <p>You're going home with &euro;<span id="prize-won">0</span>!</p>
@@ -133,7 +133,7 @@
 
     <!-- 'GAME WON' Lightbox [Start]-->
     <section id="gamewon-outer-wrapper" class="overlay-bgcolor hide">
-        <div id="gamewon-inner-wrapper">
+        <div id="gamewon-inner-wrapper" class="lightbox-border">
             <h2>Congratulations, <span id="username-gamewon">player</span>!</h2>
             <p>You won <span id="grand-prize">&euro; 1 Million!</span></p>
             <button id="play-again-gamewon" class="btn-border btn-color">Play Again</button>
@@ -144,7 +144,7 @@
 
     <!-- 'QUIT' Lightbox [Start]-->
     <section id="quit-outer-wrapper" class="hide overlay-bgcolor">
-        <div id="quit-inner-wrapper">
+        <div id="quit-inner-wrapper" class="lightbox-bgcolor lightbox-border">
             <h2>Oops!</h2>
             <p>You quit the game!</p>
             <p>You're going home with NO MONEY.</p>
