--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!-- 'ENTER USERNAME' Lightbox [Start] -->
     <section id="username-outer-wrapper" class="hide overlay-bgcolor">
-        <div id="username-inner-wrapper">
+        <div id="username-inner-wrapper" class="lightbox-bgcolor lightbox-border">
             <div class="close-username-container">
                 <i class="fas fa-times" id="close-username" aria-label="button to close the lightbox"></i>
             </div>
