Improve text and responsiveness of 404 page

--- a/404.html
+++ b/404.html
@@ -34,7 +34,8 @@
         <div id="page-404-inner-wrapper">
             <h1>PAGE NOT FOUND</h1>
             <div id="page-404-info-box">
-                <p>I know you want to be a millionaire, but you are just in the wrong way.</p>
+                <p>I know you want to be a millionaire, but you are in the wrong place.</p>
+                <p>Return to home page and play the game.</p>
                 <a href="index.html" class="btn-border btn-color">Return Home</a>
             </div>
         </div>
