Add ID to cash earned, and modify its style

--- a/game-page.html
+++ b/game-page.html
@@ -42,7 +42,7 @@
             <!-- player name and money earned -->
             <section id="player-wrapper">
                 <h2>Player: <span id="player-name">Guest</span></h2>
-                <p>Cash: <span id="money-earned">0</span></p>
+                <p id="cash-earned">Cash: <span id="money-earned">0</span></p>
             </section>
             <!-- displays the money to earn per question and player's current money earned  -->
             <div id="money-container">
