Add background color and border classes to 'Game Won' lightbox

--- a/game-page.html
+++ b/game-page.html
@@ -133,7 +133,7 @@
 
     <!-- 'GAME WON' Lightbox [Start]-->
     <section id="gamewon-outer-wrapper" class="overlay-bgcolor hide">
-        <div id="gamewon-inner-wrapper" class="lightbox-border">
+        <div id="gamewon-inner-wrapper" class="lightbox-bgcolor lightbox-border">
             <h2>Congratulations, <span id="username-gamewon">player</span>!</h2>
             <p>You won <span id="grand-prize">&euro; 1 Million!</span></p>
             <button id="play-again-gamewon" class="btn-border btn-color">Play Again</button>
