Remove unused elements and ID

--- a/game-page.html
+++ b/game-page.html
@@ -93,18 +93,10 @@
             <!-- container for the answers-->
             <div id="answers-container">
                 <!-- options for the answer -->
-                <button class="answer-button" id="answer-option-a">
-                    A. <span id="option1-text"> </span>
-                </button>
-                <button class="answer-button" id="answer-option-b">
-                    B. <span id="option2-text"> </span>
-                </button>
-                <button class="answer-button" id="answer-option-c">
-                    C. <span id="option3-text"> </span>
-                </button>
-                <button class="answer-button" id="answer-option-d">
-                    D. <span id="option4-text"> </span>
-                </button>
+                <button class="answer-button" id="answer-option-a"></button>
+                <button class="answer-button" id="answer-option-b"></button>
+                <button class="answer-button" id="answer-option-c"></button>
+                <button class="answer-button" id="answer-option-d"></button>
             </div>
         </div>
     </main>
