Add role attribute to buttons, and fix issue with html checker

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- 'ENTER USERNAME' Lightbox [Start] -->
     <section id="username-outer-wrapper" class="hide overlay-bgcolor">
         <div id="username-inner-wrapper" class="lightbox-bgcolor lightbox-border">
-            <div class="close-username-container">
-                <i class="fas fa-times" id="close-username" aria-label="button to close the lightbox"></i>
+            <div class="close-username-container" role="button" aria-label="close the lightbox">
+                <i class="fas fa-times" id="close-username"></i>
             </div>
             <h2>Enter Player's Name:</h2>
             <form id="username-form">
@@ -50,7 +50,7 @@
     <!-- 'ENTER USERNAME' Lightbox [End] -->
 
     <!-- 'HOW TO PLAY' Lightbox [Start] -->
-    <section id="howtoplay-outer-wrapper" class="hide"></section>
+    <div id="howtoplay-outer-wrapper" class="hide"></div>
     <!-- 'HOW TO PLAY' Lightbox [End] -->
 
     <!-- link to Fontawesome -->
