--- a/game-page.html
+++ b/game-page.html
@@ -67,15 +67,15 @@
             <!-- Life Lines to help player choose the correct answer -->
             <section id="life-lines">
                 <h2>Life Lines</h2>
-                <div data-lifeline="remove-one-option" class="life-line-item">
+                <div data-lifeline="remove-one-option" class="life-line-item" role="button">
                     <i class="fas fa-hands-helping lifeline-icon"></i>
                     <span class="tooltip">Removes 1 wrong answer</span>
                 </div>
-                <div data-lifeline="remove-two-options" class="life-line-item">
+                <div data-lifeline="remove-two-options" class="life-line-item" role="button">
                     <i class="fas fa-life-ring lifeline-icon"></i>
                     <span class="tooltip">Removes 2 wrong answers</span>
                 </div>
-                <div data-lifeline="add-to-timer" class="life-line-item">
+                <div data-lifeline="add-to-timer" class="life-line-item" role="button">
                     <i class="fas fa-clock lifeline-icon"></i>
                     <span class="tooltip">Adds 30 sec more to your time</span>
                 </div> 
@@ -147,7 +147,7 @@
     <!-- 'QUIT' Lightbox [End]-->
 
     <!-- 'HOW TO PLAY' Lightbox [Start] -->
-    <section id="howtoplay-outer-wrapper" class="hide"></section>
+    <div id="howtoplay-outer-wrapper" class="hide"></div>
     <!-- 'HOW TO PLAY' Lightbox [End] -->
 
     <!-- link to Fontawesome -->
