Remove un-necessary character

--- a/game-page.html
+++ b/game-page.html
@@ -115,7 +115,7 @@
         <div id="gameover-inner-wrapper" class="lightbox-bgcolor lightbox-border">
             <h2>Game Over</h2>
             <p>We're sorry, <span id="username-gameover">Player Name</span>, you lost!</p>
-            <p>You're going home with &euro;<span id="prize-won">0</span>!</p>
+            <p>You're going home with <span id="prize-won">0</span>!</p>
             <span class="not-bad hide">Not bad!</span>
             <button id="play-again-gameover" class="btn-border btn-color">Play Again</button>
             <a href="index.html" class="btn-border btn-color">Home</a>
