--- a/game-page.html
+++ b/game-page.html
@@ -127,7 +127,7 @@
     <section id="gamewon-outer-wrapper" class="overlay-bgcolor hide">
         <div id="gamewon-inner-wrapper" class="lightbox-bgcolor lightbox-border">
             <h2>Congratulations, <span id="username-gamewon">player</span>!</h2>
-            <p>You won <span id="grand-prize">&euro; 1 Million!</span></p>
+            <p>You just won <span id="grand-prize">&euro; 1 Million!</span></p>
             <button id="play-again-gamewon" class="btn-border btn-color">Play Again</button>
             <a href="index.html" class="btn-border btn-color">Home</a>
         </div>
