Update comments and organize

--- a/404.html
+++ b/404.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta name="description" content="Let's play an exciting online quiz game inspired by the famous 'Who Wants To Be a Millionaire' game show.">
     <meta name="keywords" content="quiz, game show, online quiz, online game show, who wants to be a millionaire">
     <meta name="author" content="Mark Gil Dacutan">
-
     <title>The Million Euro Quiz</title>
-    
     <!-- link to external css file -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- link to favicons -->
+    <!-- links to favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
 </head>
 <body id="page-404-body">
     <header>
+        <!-- navbar -->
         <nav>
             <div id="logo-wrapper-nav">
+                <!-- logo -->
                 <h1 id="logo-nav">
                     <span>The</span> 
                         Million Euro 
@@ -30,12 +29,15 @@
             </div>
         </nav>
     </header>
+
+    <!-- 404 Main Content -->
     <section id="page-404-outer-wrapper">
         <div id="page-404-inner-wrapper">
             <h1>PAGE NOT FOUND</h1>
             <div id="page-404-info-box">
                 <p>I know you want to be a millionaire, but you are in the wrong place.</p>
                 <p>Return to home page and play the game.</p>
+                <!-- button -->
                 <a href="index.html" class="btn-border btn-color">Return Home</a>
             </div>
         </div>
