Add aria-label to buttons to solve accesibility issues in lightbouse

--- a/game-page.html
+++ b/game-page.html
@@ -71,17 +71,17 @@
             <section id="life-lines">
                 <h2>Life Lines</h2>
                 <!-- to remove 1 wrong answer -->
-                <div data-lifeline="remove-one-option" class="life-line-item" role="button">
+                <div data-lifeline="remove-one-option" class="life-line-item" role="button" aria-label="removes 1 wrong answer">
                     <i class="fas fa-hands-helping lifeline-icon"></i>
                     <span class="tooltip">Removes 1 wrong answer</span>
                 </div>
                 <!-- to remove 2 wrong answers -->
-                <div data-lifeline="remove-two-options" class="life-line-item" role="button">
+                <div data-lifeline="remove-two-options" class="life-line-item" role="button" aria-label="removes 2 wrong answers">
                     <i class="fas fa-life-ring lifeline-icon"></i>
                     <span class="tooltip">Removes 2 wrong answers</span>
                 </div>
                 <!-- Adds more time to timer -->
-                <div data-lifeline="add-to-timer" class="life-line-item" role="button">
+                <div data-lifeline="add-to-timer" class="life-line-item" role="button" aria-label="adds 30 seconds to the timer">
                     <i class="fas fa-clock lifeline-icon"></i>
                     <span class="tooltip">Adds 30 sec more to your time</span>
                 </div> 
@@ -101,10 +101,10 @@
             <!-- container for answers-->
             <div id="answers-container">
                 <!-- options for the answer -->
-                <button class="answer-button" id="answer-option-a"></button>
-                <button class="answer-button" id="answer-option-b"></button>
-                <button class="answer-button" id="answer-option-c"></button>
-                <button class="answer-button" id="answer-option-d"></button>
+                <button class="answer-button" id="answer-option-a" aria-label="option A"></button>
+                <button class="answer-button" id="answer-option-b" aria-label="option B"></button>
+                <button class="answer-button" id="answer-option-c" aria-label="option B"></button>
+                <button class="answer-button" id="answer-option-d" aria-label="option B"></button>
             </div>
 
         </div>
