Fix spelling of 'lifelines'

--- a/game-page.html
+++ b/game-page.html
@@ -67,9 +67,9 @@
                 </ul>
             </div>
 
-            <!-- Life Lines -->
+            <!-- Lifelines -->
             <section id="life-lines">
-                <h2>Life Lines</h2>
+                <h2>Lifelines</h2>
                 <!-- to remove 1 wrong answer -->
                 <div data-lifeline="remove-one-option" class="life-line-item" role="button" aria-label="removes 1 wrong answer">
                     <i class="fas fa-hands-helping lifeline-icon"></i>
