Make cash prizes list initially invisible when game starts

--- a/game-page.html
+++ b/game-page.html
@@ -49,21 +49,21 @@
             <!-- displays levels & cash values  -->
             <div id="money-container">
                 <ul id="money-list">
-                    <li data-prize="500">1 - &euro; 500</li>
-                    <li data-prize="1,000">2 - &euro; 1,000</li>
-                    <li data-prize="1,500">3 - &euro; 1,500</li>
-                    <li data-prize="2,000">4 - &euro; 2,000</li>
-                    <li data-prize="2,500">5 - &euro; 2,500</li>
-                    <li data-prize="5,000">6 - &euro; 5,000</li>
-                    <li data-prize="10,000">7 - &euro; 10,000</li>
-                    <li data-prize="20,000">8 - &euro; 20,000</li>
-                    <li data-prize="40,000">9 - &euro; 40,000</li>
-                    <li data-prize="80,000">10 - &euro; 80,000</li>
-                    <li data-prize="100,000">11 - &euro; 100,000</li>
-                    <li data-prize="125,000">12 - &euro; 125,000</li>
-                    <li data-prize="150,000">13 - &euro; 150,000</li>
-                    <li data-prize="200,000">14 - &euro; 200,000</li>
-                    <li data-prize="1-million">15 - &euro; 1,000,000</li>
+                    <li data-prize="500" class="invisible">1 - &euro; 500</li>
+                    <li data-prize="1,000" class="invisible">2 - &euro; 1,000</li>
+                    <li data-prize="1,500" class="invisible">3 - &euro; 1,500</li>
+                    <li data-prize="2,000" class="invisible">4 - &euro; 2,000</li>
+                    <li data-prize="2,500" class="invisible">5 - &euro; 2,500</li>
+                    <li data-prize="5,000" class="invisible">6 - &euro; 5,000</li>
+                    <li data-prize="10,000" class="invisible">7 - &euro; 10,000</li>
+                    <li data-prize="20,000" class="invisible">8 - &euro; 20,000</li>
+                    <li data-prize="40,000" class="invisible">9 - &euro; 40,000</li>
+                    <li data-prize="80,000" class="invisible">10 - &euro; 80,000</li>
+                    <li data-prize="100,000" class="invisible">11 - &euro; 100,000</li>
+                    <li data-prize="125,000" class="invisible">12 - &euro; 125,000</li>
+                    <li data-prize="150,000" class="invisible">13 - &euro; 150,000</li>
+                    <li data-prize="200,000" class="invisible">14 - &euro; 200,000</li>
+                    <li data-prize="1-million" class="invisible">15 - &euro; 1,000,000</li>
                 </ul>
             </div>
 
