--- a/game-page.html
+++ b/game-page.html
@@ -90,8 +90,8 @@
             <!-- container for question and timer -->
             <section id="question-container">
                 <!-- Question -->
-                <h2>Question <span id="question-number">0</span>:</h2>
-                <p id="question-text">Question text here</p>
+                <h2 class="invisible">Question <span id="question-number">0</span>:</h2>
+                <p id="question-text" class="invisible">Question text here</p>
                 <!-- 30-second Timer -->
                 <div id="timer">
                     <span id="timer-value">30</span>
